# vortosql

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
docs/: architecture.md  take-home-data-agent.md
scripts/: load_dotenv.sh  run_cli.sh  run_ui.sh  smoke_pipeline.py  smoke_schema_linker.py
src/core/database/: __init__.py  database_handler.py
src/core/database/adapters/: __init__.py  base_adapter.py  duckdb_adapter.py  sqlite_adapter.py
src/core/logger/: __init__.py  logger.py
src/core/model_manager/: __init__.py  anthropic_model.py  huggingface_model.py  model_manager.py  ollama_model.py  openai_model.py  utils.py
src/core/prompt_renderer/: __init__.py  prompt_renderer.py
src/nl2sql_data_agent/: app.py  cli.py  ui.py
src/nl2sql_data_agent/core/database/: database_handler.py
src/nl2sql_data_agent/core/logger/: logger.py
src/nl2sql_data_agent/core/model_manager/: model_manager.py
src/nl2sql_data_agent/core/prompt_renderer/: prompt_renderer.py
src/nl2sql_data_agent/pipeline/: config.py  nl2sql_pipeline.py  operator.py
src/nl2sql_data_agent/pipeline/answer_generator/: __init__.py  answer_generator.py
src/nl2sql_data_agent/pipeline/example_selector/: __init__.py  example_selector.py  question_similarity.py
src/nl2sql_data_agent/pipeline/intent_guardrail/: __init__.py  intent_guardrail.py
src/nl2sql_data_agent/pipeline/schema_linker/: __init__.py  schema_linker.py
src/nl2sql_data_agent/pipeline/sql_executor/: sql_executor.py
src/vortosql/: app.py  cli.py  ui.py
src/vortosql/core/database/: database_handler.py
src/vortosql/core/model_manager/: huggingface_model.py  openai_model.py
src/vortosql/pipeline/: config.py  nl2sql_pipeline.py  operator.py
src/vortosql/pipeline/answer_generator/: answer_generator.py
src/vortosql/pipeline/example_selector/: question_similarity.py
src/vortosql/pipeline/intent_guardrail/: intent_guardrail.py
src/vortosql/pipeline/schema_linker/: schema_linker.py
src/vortosql/pipeline/sql_corrector/: sql_corrector.py
src/vortosql/pipeline/sql_executor/: sql_executor.py
src/vortosql/pipeline/sql_generator/: sql_generator.py
tests/: conftest.py
tests/core/database/: test_database_handler.py
tests/core/database/adapters/: test_base_adapter.py  test_duckdb_adapter.py  test_postgres_adapter.py  test_sqlite_adapter.py
tests/pipeline/: conftest.py  test_intent_guardrail.py  test_schema_linker.py  test_sql_corrector.py  test_sql_executor.py
(+15 files in other folders)
