[project]
name = "nl2sql-data-agent"
version = "0.1.0"
description = "NL2SQL Data Agent"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.96.0",
    "duckdb>=1.5.2",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "ollama>=0.6.1",
    "openai>=2.32.0",
    "tiktoken>=0.12.0",
    "transformers>=5.5.4",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.11",
]
